Closed
Bug 642806
Opened 15 years ago
Closed 15 years ago
List add crashes with GCInlineObject inheritance
Categories
(Tamarin Graveyard :: Garbage Collection (mmGC), defect, P1)
Tamarin Graveyard
Garbage Collection (mmGC)
Tracking
(Not tracked)
RESOLVED
FIXED
Q3 11 - Serrano
People
(Reporter: treilly, Assigned: treilly)
Details
Attachments
(2 files)
|
564 bytes,
patch
|
Details | Diff | Splinter Review | |
|
1.16 KB,
patch
|
stejohns
:
review+
edwsmith
:
superreview+
|
Details | Diff | Splinter Review |
No description provided.
| Assignee | ||
Comment 1•15 years ago
|
||
| Assignee | ||
Comment 2•15 years ago
|
||
Attachment #520220 -
Flags: superreview?(edwsmith)
Attachment #520220 -
Flags: review?(stejohns)
| Assignee | ||
Comment 3•15 years ago
|
||
I can't explain why this fixes it, the *()&m_that construction just stopped working when the list picked up a base class, don't know why. Anyway this seems cleaner.
Comment 4•15 years ago
|
||
I hate to delay fixing a crash, but I'd really like to know *why* this fixes it before I R+... disassembler?
| Assignee | ||
Comment 5•15 years ago
|
||
I can do that but I'm not sure it will be very informative, I think what's needed here is an understanding of C++ here (assuming that what GCC is doing is correct, haven't tried a different compiler yet). Hmm, maybe this is a good excuse to download the shiny new xcode 4 and see what clang does.
Do you happen to remember why the code wasn't written this way in the first place?
Comment 6•15 years ago
|
||
(In reply to comment #5)
> Do you happen to remember why the code wasn't written this way in the first
> place?
Nope. I guess *removing* a cast is safer than adding one...
| Assignee | ||
Comment 7•15 years ago
|
||
And quite a dubious cast at that. Crash doesn't repro with gcc-4.0. I smell a compiler bug.
| Assignee | ||
Comment 8•15 years ago
|
||
Okay I'm done, no assembler for me, it only crashes on GCC 4.2 x86 so Its a compiler bug that I have no interest in knowing more about. At least its a good fix that stands on its own and not some odd ball bug workaround hack.
| Assignee | ||
Comment 9•15 years ago
|
||
This is blocking the landing of the exact tracing safety net in the player.
Updated•15 years ago
|
Attachment #520220 -
Flags: review?(stejohns) → review+
Comment 10•15 years ago
|
||
changeset: 6117:3b45d4b79183
user: Tommy Reilly <treilly@adobe.com>
summary: Bug 642806 - List add crashes with GCInlineObject inheritance (r=stejohns,sr=edwsmith)
http://hg.mozilla.org/tamarin-redux/rev/3b45d4b79183
| Assignee | ||
Updated•15 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Attachment #520220 -
Flags: superreview?(edwsmith) → superreview+
You need to log in
before you can comment on or make changes to this bug.
Description
•