Bug 642806 - List add crashes with GCInlineObject inheritance (r=stejohns,sr=edwsmith)